--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#info">Información</a></li>
             <li><a href="#rol">Roles</a></li>
             <li><a href="#galeria">Galería</a></li>
-            <li><a href="">Contacto</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
     <!-- encabezado hero -->
@@ -88,7 +88,7 @@
         </div>
     </section>
 
-    <section class="contacto">
+    <section class="contacto" id="contacto">
         <div  class="contenedor">
             <h2 class="formulario" >formulario contacto</h2>
             <form class="contacto">
